Fix spacing, add Cozette

--- a/static/sass/base/_fonts.scss
+++ b/static/sass/base/_fonts.scss
@@ -1,16 +1,14 @@
 // Defaults for everything
 @use 'sass:map';
 
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=VT323&display=swap&family=Inconsolata:wght@400;700&display=swap');
-
 @font-face {
-    font-family: 'Cozette', monospace;
-    src: url("../../fonts/cozette_bitmap.ttf") format("truetype");
+    font-family: 'Cozette';
+    src: url("/static/fonts/CozetteVector.ttf") format("truetype");
 }
 
-$font-body: 'Courier Prime', monospace;
-$font-head: 'VT323', serif;
-$font-monospace: 'Inconsolata', monospace;
+$font-body: 'Cozette', monospace;
+$font-head: 'Cozette', serif;
+$font-monospace: 'Cozette', monospace;
 
 $font-sizes: (
     "0": 1rem,
@@ -29,11 +27,12 @@ html {
 // Header
 h1, h2, h3 {
     font-family: $font-head;
+    font-weight: normal;
     font-size: map.get($font-sizes, "4");
 }
 
 h4, h5, h6 {
     font-family: $font-body;
-    font-weight: bold;
+    font-weight: normal;
     font-size: map.get($font-sizes, "2");
 }
