--- a/static/sass/common/_buttons-grid.scss
+++ b/static/sass/common/_buttons-grid.scss
@@ -1,11 +1,11 @@
 .buttons-grid {
-    row-gap: 1rem;
-    column-gap: 1rem;
+    row-gap: 2rem;
+    column-gap: 1.5rem;
 }
 
 @media screen and (max-width: 640px) {
     .buttons-grid {
-        row-gap: 0;
-        column-gap: 1.5rem;
+        row-gap: 1rem;
+        column-gap: 0;
     }
 }
