--- a/static/sass/common/_content.scss
+++ b/static/sass/common/_content.scss
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 640px) {
     .content { 
-        max-width: 100vw;
+        max-width: 90vw;
     }
 
 }
